<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">


        <EditText
            android:id="@+id/edit_text_key_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_hint_key_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#000000"
            android:textColorHint="#888888" />

        <!-- 按键组合输入框和清空按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_key_codes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="4dp"
                android:hint="@string/dialog_hint_key_codes"
                android:minHeight="48dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textColorHint="#888888"/>

            <Button
                android:id="@+id/button_clear_keys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:text="@string/dialog_button_clear"
                android:textColor="@color/theme_pink_primary" />

        </LinearLayout>

        <!-- 使用 <include> 标签嵌入虚拟键盘 -->
        <include
            layout="@layout/virtual_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

    </LinearLayout>
</ScrollView>